# shark-tank-app

./: .gitignore  README.md  results.json
backend/: main.py  pyproject.toml  requirements.txt  shark_tank_api.postman_collection.json  tempCodeRunnerFile.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
