[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.15",
    "chromadb==1.1.0",
    "crewai==0.201.1",
    "fastapi==0.116.2",
    "httpx==0.28.1",
    "instructor==1.11.3",
    "jiter==0.10.0",
    "json-repair==0.25.2",
    "json5==0.12.1",
    "jsonref==1.1.0",
    "langchain==0.3.27",
    "langchain-core==0.3.77",
    "langchain-openai==0.3.34",
    "litellm==1.74.9",
    "onnxruntime==1.23.0",
    "openai==1.108.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "portalocker==2.7.0",
    "posthog==5.4.0",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "tiktoken==0.11.0",
    "tokenizers==0.22.0",
    "urllib3==2.3.0",
    "uvicorn[standard]==0.35.0",
]
